--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,11 +11,11 @@
 <meta name="author" content="#" />
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, maximum-scale=1" />
-<link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/font-awesome.min.css" />
-<link rel="stylesheet" href="css/animate.css" />
-<link rel="stylesheet" href="css/owl.carousel.css" />
-<link rel="stylesheet" href="css/owl.theme.default.min.css" />
+<link rel="stylesheet" th:href="@{css/bootstrap.min.css}" />
+<link rel="stylesheet" th:href="@{css/font-awesome.min.css}" />
+<link rel="stylesheet" th:href="@{css/animate.css}" />
+<link rel="stylesheet" th:href="@{css/owl.carousel.css}" />
+<link rel="stylesheet" th:href="@{css/owl.theme.default.min.css}" />
 <!-- slick slider -->
 <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
 		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">-->
@@ -24,7 +24,7 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" />
 <!-- MAIN CSS -->
-<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" th:href="@{css/style.css}" />
 <style>
 /* Set the size of the div element that contains the map */
 #map {
@@ -334,7 +334,7 @@
 							</div>
 						</div>
 					</div>
-					                     
+					Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â  Â 
 
 					<div class="slider-self">
 						<div class="slider-inside-box">
