--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 
 <head>
 <meta charset="ISO-8859-1">
@@ -1619,21 +1619,21 @@
 	<!-- The modal -->
 
 	<!-- SCRIPTS -->
-	<script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.sticky.js"></script>
-	<script src="js/jquery.stellar.min.js"></script>
-	<script src="js/wow.min.js"></script>
-	<script src="js/smoothscroll.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
+	<script th:src="@{/js/jquery.js}"></script>
+	<script th:src="@{/js/bootstrap.min.js}"></script>
+	<script th:src="@{/js/jquery.sticky.js}"></script>
+	<script th:src="@{/js/jquery.stellar.min.js}"></script>
+	<script th:src="@{/js/wow.min.js}"></script>
+	<script th:src="@{/js/smoothscroll.js}"></script>
+	<script th:src="@{/js/owl.carousel.min.js}"></script>
 	<!-- slick slider -->
 	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-	<script src="js/custom.js"></script>
-	<script src="dashboard/assets/js/captcha.js"></script>
-	<script src="dashboard/assets/js/vcarecaptcha.js"></script>
-	<script src="dashboard/assets/js/vcareAdmin.js"></script>
-	<script src="dashboard/assets/js/contract.js"></script>
+		src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js}"></script>
+	<script th:src="@{/js/custom.js}"></script>
+	<script th:src="@{/dashboard/assets/js/captcha.js}"></script>
+	<script th:src="@{/dashboard/assets/js/vcarecaptcha.js}"></script>
+	<script th:src="@{/dashboard/assets/js/vcareAdmin.js}"></script>
+	<script th:src="@{/dashboard/assets/js/contract.js}"></script>
 	<script>
 		//   slick slider
 		$(".slider-box").slick({
@@ -1776,16 +1776,16 @@
 
 
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js}"
 	integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
 	crossorigin="anonymous"></script>
-<script src="dashboard/assets/js/depart.js"></script>
+<script th:src="@{/dashboard/assets/js/depart.js}"></script>
 <script
-	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js}"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
 
 <script
-	src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"> </script>
+	src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js}"> </script>
 
 </html>
